update search filter

--- a/index.html
+++ b/index.html
@@ -723,5 +723,8 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 <script>
 <script src="app.js"></script>
+ <footer style="text-align: center; font-size: 12px; padding: 20px; color: gray;">
+   NOTE : ACCESS AI provides links to official AI tools and does not own or operate any listed services.
+</footer>
 </body>
 </html>
