update search filter

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ACCESS AI - AI Tools Hub</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css?v=2"/>
   <style>
     .subtitle {
       margin: 10px 0 20px;
@@ -722,7 +722,7 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 <script>
-<script src="app.js"></script>
+<script src="app.js?v=2"></script>
  <footer style="text-align: center; font-size: 12px; padding: 20px; color: gray;">
    NOTE : ACCESS AI provides links to official AI tools and does not own or operate any listed services.
 </footer>
