--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ACCESS AI - AI Tools Hub</title>
-  <link rel="stylesheet" href="style.css?v=2"/>
+  <link rel="stylesheet" href="style.css?v=4"/>
   <style>
 <script>
   if ('caches' in window) {
@@ -47,6 +47,10 @@
     </div>
 
     <div class="subtitle">Discover the best AI tools in one place</div>
+ <div style="font-style: italic; font-weight: bold; text-align: center; margin-top: -10px;">
+  (NOTE : AI OPEN SPEED = INTERNET SPEED)
+    
+</div>
 
     <div class="search-box">
       <input type="text" id="searchInput" placeholder="Search tools..." />
@@ -740,7 +744,7 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 <script>
-<script src="app.js?v=2"></script>
+<script src="app.js?v=4"></script>
  <footer style="text-align: center; font-size: 12px; padding: 20px; color: gray;">
    NOTE : ACCESS AI provides links to official AI tools and does not own or operate any listed services.
 </footer>
