update search filter and cache clear

--- a/index.html
+++ b/index.html
@@ -745,8 +745,8 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 <script>
 <script src="app.js?v=4"></script>
- <footer style="text-align: center; font-size: 12px; padding: 20px; color: gray;">
-   NOTE : ACCESS AI provides links to official AI tools and does not own or operate any listed services.
-</footer>
+<p style="text-align: center; font-size: 14px; color: gray; margin-top: 40px; line-height: 1.6;">
+  DISCLAIMER: ACCESS AI acts solely as a directory providing links to third-party AI tools and services. We do not claim any ownership, affiliation, partnership, or responsibility for the operation, content, or functionality of any external services. All trademarks, logos, and copyrights are the property of their respective owners. Use of any linked tool is subject to the respective service’s terms and conditions.
+</p>
 </body>
 </html>
