--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <header>
         <div class="container header-container">
             <a href="#" class="logo">
-                <i class="fas fa-shield-alt"></i> OM <span>SECURITY  SERVICES
+                <i class="fas fa-shield-alt"></i> OM <span>SECURITY
             </a>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
