welcome page upgrade

--- a/loading.html
+++ b/loading.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Loading | OM Security Services</title>
-  <link rel="stylesheet" href="loading.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OM SECURITY SERVICES | Welcome</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="loading.css">
 </head>
 <body>
-  
-  <!-- Logo -->
-  <div class="logo">
-    <i class="fas fa-shield-alt"></i> OM SECURITY
-  </div>
-
-  <!-- Centered Content -->
-  <div class="loading-container">
-    <h1 class="welcome-message" id="welcome-message">
-      मैं SHUSHIL PANDEY <br> OM SECURITY SERVICES में आपका स्वागत करता हूँ
-    </h1>
-
-    <div class="progress-container">
-      <div class="progress-bar" id="progress-bar"></div>
+    <div class="background-animation">
+        <div class="grid-lines"></div>
+        <div class="floating-elements">
+            <div class="floating-element"><i class="fas fa-shield-alt"></i></div>
+            <div class="floating-element"><i class="fas fa-lock"></i></div>
+            <div class="floating-element"><i class="fas fa-video"></i></div>
+            <div class="floating-element"><i class="fas fa-user-shield"></i></div>
+        </div>
     </div>
-    <div class="loading-status">
-      <span>Loading...</span>
-      <span id="progress-percentage">0%</span>
+    
+    <div class="content">
+        <div class="logo">
+            <h1 class="welcome-text">WELCOME</h1>
+            <p class="company-name">OM SECURITY SERVICES</p>
+        </div>
+        
+        <div class="loading-container">
+            <div class="loading-squares">
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+            </div>
+            <div class="loading-text">SECURITY SYSTEMS INITIALIZING</div>
+        </div>
     </div>
-  </div>
 
-  <!-- Floating dots -->
-  <div class="dots">
-    <span></span><span></span><span></span>
-  </div>
+    <div class="redirect-notice">Redirecting to secure portal...</div>
 
-  <script src="loading.js"></script>
+    <script src="loading.js"></script>
 </body>
 </html>
