--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
     <header>
         <div class="container header-container">
             <a href="#" class="logo">
-                <i class="fas fa-shield-alt"></i> OM <span>SECURITY
+                <i class="fas fa-shield-alt"></i> OM <span>SECURITY</span>
             </a>
             <button class="mobile-menu-btn">
                 <i class="fas fa-bars"></i>
@@ -48,7 +48,7 @@
             <h1>Your Safety,<br>Our <span class="accent-text">Priority</span></h1>
             <p>24/7 Professional Security Solutions with Cutting-Edge Technology</p>
             <div class="hero-buttons">
-                <a href="#contact" class="btn">Get a Free Quote</a>
+                <a href="#contact" class="btn">Get Service Now</a>
                 <a href="#services" class="btn btn-outline">Explore Services</a>
             </div>
         </div>
@@ -102,7 +102,7 @@
                         <i class="fas fa-gun"></i>
                     </div>
                     <div class="service-content">
-                        <h3>Gun Mens</h3>
+                        <h3>Gun Men</h3>
                         <p>Highly trained armed security personnel for high-risk environments and valuable asset protection.</p>
                         <a href="#contact" class="btn">EXPLORE</a>
                     </div>
@@ -113,7 +113,7 @@
                         <i class="fas fa-shield-alt"></i>
                     </div>
                     <div class="service-content">
-                        <h3>Security Guards</h3>
+                        <h3>Security Guard</h3>
                         <p>Professional security officers for access control, patrols, and general security presence.</p>
                         <a href="#contact" class="btn">EXPLORE</a>
                     </div>
@@ -182,8 +182,8 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <p>"OM Security Services provided exceptional bouncers for our nightclub. Their staff is professional, alert, and handles difficult situations with expertise."</p>
-                    <div class="client-name">..</div>
-                    <div class="client-position">.....</div>
+                    <div class="client-name">Rajesh Kumar</div>
+                    <div class="client-position">Nightclub Owner, Delhi</div>
                 </div>
                 <div class="testimonial">
                     <div class="stars">
@@ -194,8 +194,8 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <p>"The ladies guard assigned to our corporate office has been exceptional. She is professional, discreet, and has become an invaluable part of our team."</p>
-                    <div class="client-name">..</div>
-                    <div class="client-position">....</div>
+                    <div class="client-name">Priya Singh</div>
+                    <div class="client-position">HR Manager, TechCorp</div>
                 </div>
                 <div class="testimonial">
                     <div class="stars">
@@ -206,8 +206,8 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <p>"The security supervisor provided by OM Security transformed our security operations. Their expertise and leadership have significantly improved our protocols."</p>
-                    <div class="client-name">..</div>
-                    <div class="client-position">....</div>
+                    <div class="client-name">Amit Sharma</div>
+                    <div class="client-position">Facility Manager, MegaMall</div>
                 </div>
                 <div class="testimonial-nav">
                     <button id="prev-testimonial"><i class="fas fa-chevron-left"></i></button>
@@ -232,7 +232,7 @@
                         <p><i class="fas fa-envelope"></i> info@omsecurity.com</p>
                         <p><i class="fas fa-map-marker-alt"></i> 123 Security Avenue, Safetown, ST 12345</p>
                         <p><i class="fas fa-clock"></i> Available 24/7 for emergency services</p>
-                        <p><i class="fas fa-office"></i> Gauraiya, Ramnagar, Chandauli (U.P)-221008
+                        <p><i class="fas fa-office"></i> Gauraiya, Ramnagar, Chandauli (U.P)-221008</p>
                     </div>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -262,16 +262,16 @@
                                 <option value="bouncer">Bouncer Services</option>
                                 <option value="ladies-guard">Ladies Guard</option>
                                 <option value="security-supervisor">Security Supervisor</option>
-                                <option value="armed-guards">Armed Guards</option>
-                                <option value="unarmed-guards">Unarmed Guards</option>
+                                <option value="armed-guards">Gun Men</option>
+                                <option value="unarmed-guards">Security Guard</option>
                                 <option value="event-security">Event Security</option>
                             </select>
                         </div>
                         <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea id="message" required></textarea>
+                            <label for="address">Address</label>
+                            <textarea id="address" required></textarea>
                         </div>
-                        <button type="submit" class="btn">Request Quote</button>
+                        <button type="submit" class="btn">Take Service</button>
                     </form>
                 </div>
             </div>
@@ -301,6 +301,31 @@
                         <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
-        <script src="home.js"></script>
+                </div>
+                <div class="footer-col">
+                    <h3>Services</h3>
+                    <ul>
+                        <li><a href="#services">Bouncer Services</a></li>
+                        <li><a href="#services">Ladies Guard</a></li>
+                        <li><a href="#services">Security Supervisor</a></li>
+                        <li><a href="#services">Gun Men</a></li>
+                        <li><a href="#services">Security Guard</a></li>
+                        <li><a href="#services">Event Security</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h3>Contact Info</h3>
+                    <p><i class="fas fa-phone"></i> +916394827026-SECURE</p>
+                    <p><i class="fas fa-envelope"></i> info@omsecurity.com</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Gauraiya, Ramnagar, Chandauli (U.P)-221008</p>
+                </div>
+            </div>
+            <div class="copyright">
+                <p>&copy; 2023 OM Security Services. All Rights Reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="home.js"></script>
 </body>
 </html>
