--- a/home.html
+++ b/home.html
@@ -187,8 +187,8 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <p>"OM Security Services provided exceptional bouncers for our nightclub. Their staff is professional, alert, and handles difficult situations with expertise."</p>
-                    <div class="client-name">Rajesh Kumar</div>
-                    <div class="client-position">Nightclub Owner, Delhi</div>
+                    <div class="client-name">..</div>
+                    <div class="client-position">....</div>
                 </div>
                 <div class="testimonial">
                     <div class="stars">
@@ -199,8 +199,8 @@
                         <i class="fas fa-star"></i>
                     </div>
                     <p>"The ladies guard assigned to our corporate office has been exceptional. She is professional, discreet, and has become an invaluable part of our team."</p>
-                    <div class="client-name">Priya Singh</div>
-                    <div class="client-position">HR Manager, TechCorp</div>
+                    <div class="client-name">..</div>
+                    <div class="client-position">....</div>
                 </div>
                 <div class="testimonial">
                     <div class="stars">
@@ -211,8 +211,8 @@
                         <i class="fas fa-star-half-alt"></i>
                     </div>
                     <p>"The security supervisor provided by OM Security transformed our security operations. Their expertise and leadership have significantly improved our protocols."</p>
-                    <div class="client-name">Amit Sharma</div>
-                    <div class="client-position">Facility Manager, MegaMall</div>
+                    <div class="client-name">..</div>
+                    <div class="client-position">....</div>
                 </div>
                 <div class="testimonial-nav">
                     <button id="prev-testimonial"><i class="fas fa-chevron-left"></i></button>
@@ -234,10 +234,10 @@
                     <h3>Get In Touch</h3>
                     <div class="contact-details">
                         <p><i class="fas fa-phone"></i> +916394827026-SECURE</p>
-                        <p><i class="fas fa-envelope"></i> info@omsecurity.com</p>
-                        <p><i class="fas fa-map-marker-alt"></i> 123 Security Avenue, Safetown, ST 12345</p>
+                        <p><i class="fas fa-envelope"></i> sushilkumarpandey9453@gmail.com</p>
+                        <p><i class="fas fa-map-marker-alt"></i> Gauraiya, Ramnagar, Chandauli (U.P)-221008</p>
                         <p><i class="fas fa-clock"></i> Available 24/7 for emergency services</p>
-                        <p><i class="fas fa-office"></i> Gauraiya, Ramnagar, Chandauli (U.P)-221008</p>
+                         
                     </div>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -321,7 +321,7 @@
                 <div class="footer-col">
                     <h3>Contact Info</h3>
                     <p><i class="fas fa-phone"></i> +916394827026-SECURE</p>
-                    <p><i class="fas fa-envelope"></i> info@omsecurity.com</p>
+                    <p><i class="fas fa-envelope"></i> sushilkumarpandey9453@gmail.com</p>
                     <p><i class="fas fa-map-marker-alt"></i> Gauraiya, Ramnagar, Chandauli (U.P)-221008</p>
                 </div>
             </div>
